--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,15 +19,18 @@
     </div>
     <div class="row">
         <% campgrounds.forEach(function(campground){ %>
-        <div class="col-md-3 col-sm-6"> 
-            <div >
-                <img src="<%= campground.image %>" alt="" class="img-thumbnail img-fluid">
-            </div> 
-            <div class="caption text-center">
-                <h4><%= campground.name %></h4>
-            </div>    
-        </div>
-            <% }); %>
+            <div class="col-md-3 col-sm-6"> 
+                <div>
+                    <img src="<%= campground.image %>" alt="" class="img-thumbnail">
+                </div> 
+                            <div class="caption text-center">
+                                <h4><%= campground.name %></h4>
+                            </div> 
+                        <p>
+                            <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                        </p>
+                    </div>
+                <% }); %>
         </div>
 </div>
 
