--- a/views/new.ejs
+++ b/views/new.ejs
@@ -11,6 +11,9 @@
                     <input type="text" placeholder="Image Url" name="image" class="form-control">
                 </div>
                 <div class="form-group">
+                    <input type="text" placeholder="Description" name="description" class="form-control">
+                </div>
+                <div class="form-group">
                     <button class="btn btn-block btn-primary" type="submit">Submit</button>
                 </div>
             </form>
