--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <div class="container">
     <div class="row">
         <div style="width: 30%; margin: 25px auto;">  
@@ -22,4 +22,4 @@
     </div>
 </div>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
