--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,20 +1,52 @@
 <% include ../partials/header %>
 
-
-<h1><%=campground.name%></h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">YelpCamp</p>
+            <div class="list-group">
+                <li class="list-group-item">info 1</li>
+                <li class="list-group-item">info 1</li>
+                <li class="list-group-item">info 1</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="img-thumbnail">
+                <img class="img-responsive" src="<%= campground.image%>">
+                <div class="p-2">
+                    <h4 class="float-right">$9.00 / night</h4>
+                    <h4><a><%=campground.name%></a></h4>
+                    <p class="captions"><%=campground.description%></p>
+                </div>
+            </div>
+            <div class="jumbotron">
+                <div class="text-right">
+                    <a class="btn btn-success" href="/campgrounds/<%= campground._id%>/comments/new">Add New Comment</a>
+                </div>
+                <% campground.comments.forEach(function(comment){ %> 
+                    <div class="row">
+                        <div class="col-md-12">
+                        <strong><%= comment.author %> </strong>
+                          <span class="float-right">10 days ago</span>
+                             <p>
+                                <%= comment.text %>
+                            </p>
+                        </div>
+                    </div>
+                <% }) %>
+            </div>
+        </div>
+    </div>
+    
 
 <p></p>
-<img src="<%=campground.image%>">
-<p><%=campground.description%></p>
+
+
 <p>
-    <a class="btn btn-success" href="/campgrounds/<%= campground._id%>/comments/new">Add New Comment</a>
-</p>
-<% campground.comments.forEach(function(comment){ %> 
     
-    <p><strong>
-        <%= comment.author %> 
-    </strong> - <%= comment.text %></p>
+</p>
+
+</div>
 
 
-<% }) %>
 <% include ../partials/footer %>
