--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,18 +9,48 @@
     <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
 <body>
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<!--    <a class="navbar-brand" href="/">YelpCamps</a>-->
+<!--    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--        <span class="navbar-toggler-icon"></span>-->
+<!--    </button>-->
+<!--    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">-->
+<!--        <ul class="navbar-nav nav navbar-right">-->
+            
+<!--        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>-->
+<!--        <a class="nav-item nav-link" href="/campgrounds">All Camps</a>-->
+<!--        <li><a class="nav-item nav-link float-right" href="#">Pricing</a></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</nav>-->
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <a class="navbar-brand" href="/">YelpCamps</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/campgrounds">All Camps</a>
-        <a class="nav-item nav-link" href="#">Pricing</a>
-        </div>
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/campgrounds">All Camps</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <div class="form-inline">
+      <% if(!currentUser){ %>
+        <a href="/register">Register</a>
+        <a href="/login" class="ml-3">Login</a>
+      <%  }else{ %>
+        <li style="list-style: none">Signed In AS <a><%= currentUser.username %></a></li>
+        <a href="/logout" class="ml-3 mr-5">LogOut</a>
+      <%  }; %>
     </div>
+  </div>
 </nav>
     <br>
     
