--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -7,9 +7,9 @@
                 <div class="form-group">
                     <input type="text" placeholder="comment" name="comment[text]" class="form-control">
                 </div>
-                <div class="form-group">
-                    <input type="text" placeholder="author" name="comment[author]" class="form-control">
-                </div>
+                <!--<div class="form-group">-->
+                <!--    <input type="text" placeholder="author" name="comment[author]" class="form-control">-->
+                <!--</div>-->
                 <div class="form-group">
                     <button class="btn btn-block btn-primary" type="submit">Submit</button>
                 </div>
