adding dynamic price feature

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,7 +14,7 @@
             <div class="img-thumbnail">
                 <img class="img-responsive" src="<%= campground.image%>">
                 <div class="p-2">
-                    <h4 class="float-right">$9.00 / night</h4>
+                    <h4 class="float-right">$<%= campground.price %> / night</h4>
                     <h4><a><%=campground.name%></a></h4>
                     <p class="captions"><%=campground.description%></p>
                     <p>
