--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -8,6 +8,9 @@
                 <div class="form-group">
                     <input type="text" placeholder="<%= campground.name %>" name="campground[name]" class="form-control">
                 </div>
+                 <div class="form-group">
+                    <input type="number" value="<%= campground.price %>" name="campground[price]" class="form-control" min="0.01" step="0.01">
+                </div>
                 <div class="form-group">
                     <input type="text" placeholder="<%= campground.image %>" name="campground[image]" class="form-control">
                 </div>
