--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -8,6 +8,9 @@
                     <input type="text" placeholder="name" name="name" class="form-control">
                 </div>
                 <div class="form-group">
+                    <input type="number" placeholder="price" name="price" class="form-control" min="0.01" step="0.01">
+                </div>
+                <div class="form-group">
                     <input type="text" placeholder="Image Url" name="image" class="form-control">
                 </div>
                 <div class="form-group">
